calendar alignment fix

--- a/wp-content/themes/wp-bs-theme-simple/dev/css/wp-bs-theme-simple.css
+++ b/wp-content/themes/wp-bs-theme-simple/dev/css/wp-bs-theme-simple.css
@@ -154,11 +154,16 @@ $gray-lightest:             #81d742!default;
   padding-right: 4.8px;
   padding-right: .3rem; }
 
-/*no bullets in lists*/
-.widget ul,
-.widget ol {
-  list-style-type: none;
-  padding: 0; }
+/*widgets*/
+.widget {
+  /* calendar-widget bugfix */
+  /*no bullets in lists*/ }
+  @media (max-width: 768px) {
+    .widget #wp-calendar {
+      margin: 0 auto; } }
+  .widget ul, .widget ol {
+    list-style-type: none;
+    padding: 0; }
 
 /* maybe to adjust all pagination-links is not right */
 .nav-links {
